src/app/features/home/capture-tab/uploading-bar/uploading-bar.component.scss
.thin-upload-bar {
  min-height: 32px;
  height: 32px;
  justify-content: stretch;
  transition: all 1s;

  .text {
    flex-grow: 1;
    font-size: 0.7em;
    margin-left: 10px;
    margin-right: 10px;
  }

  .spacer-text {
    flex-grow: 0;
  }

  mat-icon {
    margin-left: 10px;
    margin-right: 10px;
  }
}

.spacer {
  flex: 1 1 auto;
}

